[gd_scene load_steps=22 format=2]

[ext_resource path="res://menu/title/assets/spr_title_l.png" type="Texture" id=1]
[ext_resource path="res://menu/title/assets/spr_title_b.png" type="Texture" id=2]
[ext_resource path="res://menu/title/assets/spr_title_o.png" type="Texture" id=3]
[ext_resource path="res://menu/title/assets/spr_title_s.png" type="Texture" id=4]
[ext_resource path="res://menu/title/assets/spr_title_o2.png" type="Texture" id=5]
[ext_resource path="res://menu/title/assets/spr_title_a.png" type="Texture" id=6]
[ext_resource path="res://menu/title/assets/spr_title_n.png" type="Texture" id=7]
[ext_resource path="res://menu/title/assets/spr_title_o3.png" type="Texture" id=8]
[ext_resource path="res://menu/title/assets/spr_title_r.png" type="Texture" id=9]
[ext_resource path="res://menu/title/assets/spr_subtitle.png" type="Texture" id=10]
[ext_resource path="res://menu/title/gds_title.gd" type="Script" id=11]
[ext_resource path="res://menu/title/assets/spr_street.png" type="Texture" id=12]
[ext_resource path="res://menu/title/assets/spr_bg.png" type="Texture" id=13]
[ext_resource path="res://audio/music/mus_ronaldinho_soccer.ogg" type="AudioStream" id=14]
[ext_resource path="res://menu/title/assets/spr_bozo_temp.png" type="Texture" id=15]

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

uniform vec2 motion = vec2(0.0);
uniform float scale = 1.0;
uniform vec2 offset = vec2(0.0);

void vertex(){
	UV = (VERTEX + offset + TIME * motion) * TEXTURE_PIXEL_SIZE * (1.0/scale);
}"

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 4 )
shader_param/motion = Vector2( 32, 0 )
shader_param/scale = 1.0
shader_param/offset = Vector2( 0, 0 )

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )
shader_param/motion = Vector2( 64, 0 )
shader_param/scale = 1.0
shader_param/offset = Vector2( 0, 0 )

[sub_resource type="Animation" id=3]
resource_name = "FlashOut"
tracks/0/type = "value"
tracks/0/path = NodePath("Flash:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.972549, 0.972549, 0.972549, 1 ), Color( 0.972549, 0.972549, 0.972549, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pane:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=1]
resource_name = "Intro"
length = 3.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Letras/SpriteB:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 16, 256 ), Vector2( 40, 128 ), Vector2( 32, 32 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Letras/SpriteB:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Letras/SpriteO:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25, 0.65, 1.05 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 48, 256 ), Vector2( 48, 256 ), Vector2( 72, 128 ), Vector2( 64, 32 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Letras/SpriteO:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.25, 1.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Letras/SpriteL:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5, 0.9, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 80, 256 ), Vector2( 80, 256 ), Vector2( 104, 128 ), Vector2( 96, 32 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Letras/SpriteL:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.5, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Letras/SpriteS:position")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.75, 1.15, 1.55 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 112, 256 ), Vector2( 112, 256 ), Vector2( 144, 128 ), Vector2( 128, 32 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Letras/SpriteS:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.75, 1.55 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 1, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Letras/SpriteO2:position")
tracks/8/interp = 2
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 1, 1.4, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 144, 256 ), Vector2( 144, 256 ), Vector2( 176, 128 ), Vector2( 160, 32 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Letras/SpriteO2:scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 1, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 1, 1 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Letras/SpriteN:position")
tracks/10/interp = 2
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 1.25, 1.65, 2.05 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 16, 288 ), Vector2( 16, 288 ), Vector2( 40, 176 ), Vector2( 32, 64 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Letras/SpriteN:scale")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 1.25, 2.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 1, 1 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Letras/SpriteA:position")
tracks/12/interp = 2
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 1.5, 1.9, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 48, 288 ), Vector2( 48, 288 ), Vector2( 80, 176 ), Vector2( 64, 64 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Letras/SpriteA:scale")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 1.5, 2.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 1, 1 ) ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("Letras/SpriteR:position")
tracks/14/interp = 2
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0, 1.75, 2.15, 2.55 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 80, 288 ), Vector2( 80, 288 ), Vector2( 112, 176 ), Vector2( 96, 64 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("Letras/SpriteR:scale")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 1.75, 2.55 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 1, 1 ) ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("Letras/SpriteO3:position")
tracks/16/interp = 2
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 0, 2, 2.4, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 112, 288 ), Vector2( 112, 288 ), Vector2( 144, 176 ), Vector2( 128, 64 ) ]
}
tracks/17/type = "value"
tracks/17/path = NodePath("Letras/SpriteO3:scale")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"times": PoolRealArray( 2, 2.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 1, 1 ) ]
}
tracks/18/type = "value"
tracks/18/path = NodePath("Flash:self_modulate")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/keys = {
"times": PoolRealArray( 0, 3.15, 3.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 0.972549, 0.972549, 0.972549, 1 ) ]
}
tracks/19/type = "value"
tracks/19/path = NodePath("Pane:visible")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/20/type = "method"
tracks/20/path = NodePath("AnimationPlayer")
tracks/20/interp = 1
tracks/20/loop_wrap = true
tracks/20/imported = false
tracks/20/enabled = true
tracks/20/keys = {
"times": PoolRealArray( 3.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "FlashOut", -1, 1.0, false ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Letras/SpriteB:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 16, 256 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Letras/SpriteB:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Letras/SpriteO:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 48, 264 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Letras/SpriteO:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Letras/SpriteL:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 80, 256 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Letras/SpriteL:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Letras/SpriteS:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 112, 256 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Letras/SpriteS:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Letras/SpriteO2:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 144, 288 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Letras/SpriteO2:scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Letras/SpriteN:scale")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Letras/SpriteN:position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 16, 288 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Letras/SpriteA:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 48, 288 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Letras/SpriteA:scale")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ) ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("Letras/SpriteR:position")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 80, 288 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("Letras/SpriteR:scale")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ) ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("Letras/SpriteO3:position")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 112, 288 ) ]
}
tracks/17/type = "value"
tracks/17/path = NodePath("Letras/SpriteO3:scale")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ) ]
}
tracks/18/type = "value"
tracks/18/path = NodePath("Flash:self_modulate")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/19/type = "value"
tracks/19/path = NodePath("Pane:visible")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[node name="Title" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 11 )

[node name="StreetAnim" type="Control" parent="."]
margin_top = 96.0
margin_right = 256.0
margin_bottom = 192.0

[node name="BG" type="TextureRect" parent="StreetAnim"]
material = SubResource( 6 )
margin_right = 256.0
margin_bottom = 32.0
texture = ExtResource( 13 )
expand = true
stretch_mode = 2

[node name="Street" type="TextureRect" parent="StreetAnim"]
material = SubResource( 5 )
margin_top = 32.0
margin_right = 256.0
margin_bottom = 96.0
texture = ExtResource( 12 )
expand = true
stretch_mode = 2

[node name="Bozo" type="TextureRect" parent="StreetAnim"]
margin_left = 56.0
margin_top = 40.0
margin_right = 88.0
margin_bottom = 72.0
texture = ExtResource( 15 )
expand = true

[node name="BarTop" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -128.0
color = Color( 0, 0, 0, 1 )

[node name="SpriteSubtitle" type="TextureRect" parent="BarTop"]
margin_left = 168.0
margin_top = 72.0
margin_right = 232.0
margin_bottom = 80.0
texture = ExtResource( 10 )

[node name="BarBottom" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 192.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="BarBottom"]
margin_top = 8.0
margin_right = 256.0
margin_bottom = 24.0
text = "z para começar"
align = 1
valign = 1

[node name="Pane" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Intro"
anims/FlashOut = SubResource( 3 )
anims/Intro = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="Letras" type="Node2D" parent="."]

[node name="SpriteB" type="Sprite" parent="Letras"]
position = Vector2( 16, 256 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="SpriteO" type="Sprite" parent="Letras"]
position = Vector2( 48, 264 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="SpriteL" type="Sprite" parent="Letras"]
position = Vector2( 80, 256 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="SpriteS" type="Sprite" parent="Letras"]
position = Vector2( 112, 256 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="SpriteO2" type="Sprite" parent="Letras"]
position = Vector2( 144, 288 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="SpriteN" type="Sprite" parent="Letras"]
position = Vector2( 16, 288 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )

[node name="SpriteA" type="Sprite" parent="Letras"]
position = Vector2( 48, 288 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="SpriteR" type="Sprite" parent="Letras"]
position = Vector2( 80, 288 )
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )

[node name="SpriteO3" type="Sprite" parent="Letras"]
position = Vector2( 112, 288 )
scale = Vector2( 2, 2 )
texture = ExtResource( 8 )

[node name="Flash" type="ColorRect" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="IntroSoccer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
autoplay = true

[node name="LabelTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="LabelTimer" to="." method="_on_LabelTimer_timeout"]
